--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -56,7 +56,7 @@
               <td class="cv_heighlight text-warning">{{deploymentApplicationHealth ? deploymentApplicationHealth['noOfReview'] : ''}}</td>
             </tr>
             <tr>
-              <td>Succeess</td>
+              <td>Success</td>
               <td class="cv_heighlight text-success">{{deploymentApplicationHealth ? deploymentApplicationHealth['noOfSuccess'] : ''}}</td>
             </tr>
             <tr>
@@ -464,21 +464,21 @@
                </div>
               <div class="pt-1">
                 <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist">
-                  <li class="nav-item">
+                  <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
                     <a class="nav-link active" id="log-analysis-tab" data-toggle="tab" href="#log-analysis" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
                   </li>
-                  <li class="nav-item">
+                  <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
                     <a class="nav-link" id="metric-analysis-tab" data-toggle="tab" href="#metric-analysis" role="tab" aria-controls="metric-analysis" aria-selected="false">Metric Analysis</a>
                   </li>
                  
                 </ul>
                 
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane p-4 fade show active" id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab">
-                        <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId"></app-log-analysis>
+                    <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="tab-pane p-4 fade show active" id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab">
+                        <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-log-analysis>
                       </div>
-                    <div class="tab-pane mp-4 fade" id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab">
-                        <app-metric-analysis [canaryId]="control.value" [serviceId]="selectedServiceId"></app-metric-analysis>
+                    <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="tab-pane mp-4 fade" id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab">
+                        <app-metric-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-metric-analysis>
                       </div>
                 </div>
               </div>
