--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -13,8 +13,17 @@
 
     <div class="ml-auto d-flex">
       <div class="risk d-flex align-items-center">
-        <span class="mr-2"><img src="../../../assets/images/risk_icon.png" alt="risk" /></span>
-        <span><b class="d-block">Low</b>Precieved Risk</span>
+        <span class="mr-2">
+          <i *ngIf="logAnalysisResults?.sensitivity == 'high'" class="fa {{logSensitivityScores[0]?.high?.iconclass}}" aria-hidden="true"></i>
+          <i *ngIf="logAnalysisResults?.sensitivity == 'medium'" class="fa {{logSensitivityScores[0]?.medium?.iconclass}}" aria-hidden="true"></i>
+          <i *ngIf="logAnalysisResults?.sensitivity == 'low'" class="fa {{logSensitivityScores[0]?.low?.iconclass}}" aria-hidden="true"></i>
+        </span>
+        <span>
+            <b *ngIf="logAnalysisResults?.sensitivity == 'high'" class="d-block {{logSensitivityScores[0]?.high?.textclass}}" >{{logSensitivityScores[0]?.high?.risk}}</b>            
+            <b *ngIf="logAnalysisResults?.sensitivity == 'medium'" class="d-block {{logSensitivityScores[0]?.medium?.textclass}}" >{{logSensitivityScores[0]?.medium?.risk}}</b>            
+            <b *ngIf="logAnalysisResults?.sensitivity == 'low'" class="d-block {{logSensitivityScores[0]?.low?.textclass}}" >{{logSensitivityScores[0]?.low?.risk}}</b>            
+            Precieved Risk
+          </span>
       </div>
       <!-- /.risk -->
       <div class="dropdown ml-3">
