--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -43,8 +43,7 @@
           <option *ngFor="let sensitivity of sensitivityLevels" value="{{sensitivity}}">{{sensitivity}}
           </option>
         </select> -->
-
-      <button class="btn ml-3 btn-primary" (click)="getDetails()">Reclassify</button>
+      <button class="btn ml-3 btn-primary">Reclassify</button>
     </div>
     <!-- /.ml-auto -->
   </div>
@@ -102,30 +101,25 @@
 
 <div class="tab-default pt-3">
   <ul class="nav nav-tabs" id="myTabDefault" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" id="unexpected-tab" data-toggle="tab" href="#unexpected" role="tab"
-        aria-controls="unexpected" aria-selected="true">Unexpected</a>
+    <li class="nav-item" (click)="getLogAnalysis()">
+      <a class="nav-link active" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#unexpected" role="tab" aria-controls="unexpected" aria-selected="true">Unexpected</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" id="expected-tab" data-toggle="tab" href="#expected" role="tab" aria-controls="expected"
-        aria-selected="false">Expected</a>
+    <li class="nav-item" (click)="onClickLogEventTab('expected')">
+      <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#expected" role="tab" aria-controls="expected" aria-selected="false">Expected</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" id="baseline-tab" data-toggle="tab" href="#baseline" role="tab" aria-controls="baseline"
-        aria-selected="false">Baseline</a>
+    <li class="nav-item" (click)="onClickLogEventTab('baseline')">
+      <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#baseline" role="tab" aria-controls="baseline" aria-selected="false">Baseline</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" id="ignored-tab" data-toggle="tab" href="#ignored" role="tab" aria-controls="ignored"
-        aria-selected="false">Ignored</a>
+    <li class="nav-item" (click)="onClickLogEventTab('ignored')">
+      <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#ignored" role="tab" aria-controls="ignored" aria-selected="false">Ignored</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" id="all-tab" data-toggle="tab" href="#all" role="tab" aria-controls="all"
-        aria-selected="false">All</a>
+    <li class="nav-item" (click)="onClickLogEventTab('all')">
+      <a class="nav-link" id="{{eventTabLabeledBy}}" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="false">All</a>
     </li>
   </ul>
   <div class="tab-content" id="myTabDefaultContent">
-    <div class="tab-pane py-4 fade show active" id="unexpected" role="tabpanel" aria-labelledby="unexpected-tab">
-      <div class="accordion accordion-errors" id="accordionExample">
+    <div class="tab-pane py-4 fade show active" id="{{eventTab}}" role="tabpanel" aria-labelledby="">
+      <div class="accordion accordion-errors" id="accordionExample" *ngIf="logAnalysisData?.clusters?.length > 0"> 
 
         <div class="card mb-2" *ngFor="let log of logAnalysisData?.clusters">
           <div class="card-header d-flex align-items-center justify-content-between" id="heading01">
@@ -171,65 +165,10 @@
             </div>
           </div>
         </div>
-
-        <!-- <div class="card mb-2">
-          <div class="card-header d-flex align-items-center justify-content-between" id="heading02">
-            <div class="times"><b>58</b>Times</div>
-            <div class="error_graph"><img src="../../../assets/images/graph_lines_01.png" class="img-fluid" alt="graph" /></div>
-            <div class="score ml-auto">Impact On Score 1.21</div>
-            <div class="dropdown error_dropdown">
-              <button class="btn text-warning pt-0 pl-0 pb-0 pr-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="../../../assets/images/warning_icon.png" class="d-inline-block" alt="icon" /> Warning
-              </button>
-              <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
-                  <span>Reason for Reclassification</span>
-                  <i class="fa text-muted fa-times"></i>
-                </div>
-                /.dropdown_header -->
-
-        <!-- <div>
-                  <div class="form-group mb-2">
-                    <textarea class="form-control" rows="5"></textarea>
-                  </div>
-                  <div class="text-right">
-                    <button type="submit" class="btn btn-default">Close</button>
-                    <button type="submit" class="btn  btn-primary">Submit</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <button class="btn btn-link pr-0" type="button" data-toggle="collapse" data-target="#collapse02" aria-expanded="true" aria-controls="collapse02">
-              <i class="fa fa-sort-down"></i>
-            </button>
-          </div>
-
-          <div id="collapse02" class="collapse" aria-labelledby="heading02" data-parent="#accordionExample">
-            <div class="card-body text-wrap-normal">
-              2019-09-06T09:32:51.426246071+00:00 <span class="text-error">NumberFormatException</span> on f:262193 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.247115172+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:03.596305679+00:00 <span class="text-error">NumberFormatException</span> on f:262193 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.264164864+00:00 on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.263633420+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLatitude. Returning 0.0.
-              2019-09-06T09:33:32.263928634+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.247115172+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:03.596305679+00:00 <span class="text-error">NumberFormatException</span> on f:262193 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.264164864+00:00 on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.263633420+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLatitude. Returning 0.0.
-              2019-09-06T09:33:32.263928634+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.247115172+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:03.596305679+00:00 <span class="text-error">NumberFormatException</span> on f:262193 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.264164864+00:00 on f:28523 during getLongitude. Returning 0.0.
-              2019-09-06T09:33:32.263633420+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLatitude. Returning 0.0.
-              2019-09-06T09:33:32.263928634+00:00 <span class="text-error">NumberFormatException</span> on f:28523 during getLongitude. Returning 0.0.
-            </div>
-          </div>
-        </div>  -->
-
-
       </div>
+      <h3 *ngIf="logAnalysisData?.clusters?.length == 0">No Content</h3>
     </div>
-    <div class="tab-pane p-4 fade" id="expected" role="tabpanel" aria-labelledby="expected-tab">
+    <!-- <div class="tab-pane p-4 fade" id="expected" role="tabpanel" aria-labelledby="expected-tab">
       <h3>No Content</h3>
     </div>
     <div class="tab-pane p-4 fade" id="baseline" role="tabpanel" aria-labelledby="baseline-tab">
@@ -240,7 +179,7 @@
     </div>
     <div class="tab-pane p-4 fade" id="all" role="tabpanel" aria-labelledby="all-tab">
       <h3>No Content</h3>
-    </div>
+    </div> -->
   </div>
 </div>
 
