--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -1,4 +1,4 @@
 .criticality-select{
-    border-left:10px;
-    background-image: url(../../../../assets/images/error_icon.png);
+    border-left: 5px solid;
+    padding-left: 5px !important;    
 }
