--- a/src/styles.less
+++ b/src/styles.less
@@ -87,7 +87,7 @@ hr{
 	color: #c60 !important;
 }
 .text-error{
-	color: #ff3514;
+	color: #ff3514 !important;
 }
 .text-wrap-normal{
 	white-space: normal;
