--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -13,11 +13,11 @@
 
     <div class="ml-auto d-flex">
       <div class="risk d-flex align-items-center">
-        <span class="mr-2">
+        <span class="diamond">
           <i *ngIf="logAnalysisResults?.sensitivity == 'high'" class="fa {{logSensitivityScores[0]?.high?.iconclass}}" aria-hidden="true"></i>
           <i *ngIf="logAnalysisResults?.sensitivity == 'medium'" class="fa {{logSensitivityScores[0]?.medium?.iconclass}}" aria-hidden="true"></i>
           <i *ngIf="logAnalysisResults?.sensitivity == 'low'" class="fa {{logSensitivityScores[0]?.low?.iconclass}}" aria-hidden="true"></i>
-        </span>
+        </span>      
         <span>
             <b *ngIf="logAnalysisResults?.sensitivity == 'high'" class="d-block {{logSensitivityScores[0]?.high?.textclass}}" >{{logSensitivityScores[0]?.high?.risk}}</b>            
             <b *ngIf="logAnalysisResults?.sensitivity == 'medium'" class="d-block {{logSensitivityScores[0]?.medium?.textclass}}" >{{logSensitivityScores[0]?.medium?.risk}}</b>            
@@ -49,7 +49,7 @@
   </div>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="graph01" role="tabpanel" aria-labelledby="graph01-tab">
-      <div class="dot_container p-3">
+      <div class="dot_container p-3 chart-bg-color">
         <div class="graph" #ChartSize>
           <div class="dropdown dropdown-icon-remove float-right">
             <button class="btn p-0 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
