Log Analysis - Log lines header css

--- a/src/styles.less
+++ b/src/styles.less
@@ -780,7 +780,7 @@ li {
 	line-height: 1;
 	color: #4d4d4d;
 	font-size: 12px;
-	margin-right: auto;
+	//margin-right: auto;	
 }
 .times b{
 	font-weight: 400;
@@ -791,6 +791,7 @@ li {
 	font-size: 14px;
 	margin-right: 25px;
 	color: #333;
+	min-width: 160px;
 }
 .error_dropdown{
 	margin-right: 20px;
