--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -123,11 +123,11 @@
 
         <div class="card mb-2" *ngFor="let log of logAnalysisData?.clusters">
           <div class="card-header d-flex align-items-center justify-content-between" id="heading01">
-            <div class="score ml-auto">Impact On Score {{log.scoreReduction?.high}}</div>
+            <div class="score">Impact On Score {{log.scoreReduction?.high}}</div>
             <div class="times"><b>{{log.v1Len}}</b>Baseline</div>
             <div class="times"><b>{{log.v2Len}}</b>New Release</div>
-            <div class="error_graph"><img src="../../../assets/images/graph_lines_01.png" class="img-fluid"
-                alt="graph" /></div>
+            <!-- <div class="error_graph"><img src="../../../assets/images/graph_lines_01.png" class="img-fluid"
+                alt="graph" /></div> -->
 
             <div class="dropdown error_dropdown">
               <select (change)="changeCriticality($event,log)" [(ngModel)]="log.color" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select" [ngClass]="{'text-danger':log.color == 'dark red', 'text-error':log.color=='red','text-warning':log.color=='yellow','text-muted':log.color=='green'}"> 
@@ -154,6 +154,34 @@
                 </div>
               </div>
             </div>
+            <div class="dropdown error_dropdown">
+               <select (change)="changeClusterTag($event,log)" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select" > 
+               <!-- [ngClass]="{'text-danger':log.color == 'dark red', 'text-error':log.color=='red','text-warning':log.color=='yellow','text-muted':log.color=='green'}" -->
+                <option *ngFor='let tag of clusterTagList' [value]="tag.value" class="{{tag.textclass}}">
+                  {{tag.displayValue}}
+                </option>
+              </select>
+              <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right"
+                aria-labelledby="dropdownMenuButton">
+                <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
+                  <span>Reason for Reclassification</span>
+                  <i class="fa text-muted fa-times"></i>
+                </div>
+                <!-- /.dropdown_header -->
+
+                <div>
+                  <div class="form-group mb-2">
+                    <textarea class="form-control" rows="5"></textarea>
+                  </div>
+                  <div class="text-right">
+                    <button type="submit" class="btn btn-default">Close</button>
+                    <button type="submit" class="btn  btn-primary">Submit</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div data-toggle="tooltip" data-placement="top" title="Time Analysis"><i class="fa fa-bar-chart icon-bar-chart" aria-hidden="true"></i></div>
+            <button class="btn p-0" data-toggle="tooltip" data-placement="top" title="Download Cluster Info"><img src="../../../assets/images/download.png" alt="download" /></button>
             <button class="btn btn-link pr-0" type="button" data-toggle="collapse" [attr.data-target]="'#log' + log.id"
               aria-expanded="true" aria-controls="collapse01">
               <i class="fa fa-sort-down"></i>
